--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet"/>
 
   <title>Hello, world!</title>
 </head>
@@ -54,7 +55,7 @@
             <img src="gambar/planefly.png" height="42" width="42">
             <div class="col">
               <p>From:</p>
-              <select>
+              <select id="from">
                 <option value="jakarta">Jakarta</option>
                 <option value="medan">Medan</option>
                 <option value="surabaya">Surabaya</option>
@@ -67,14 +68,14 @@
           </div>
           <div class="row align-items-center justify-content-center">
             <div class="col-md-8">
-              <img src="gambar/swap.png" height="42" width="42">
+              <img src="gambar/swap.png" height="42" width="42" id="swap">
             </div>
           </div>
           <div class="row align-items-center">
             <img src="gambar/planeland.png" height="42" width="42">
             <div class="col">
               <p>To:</p>
-              <select>
+              <select id="to">
                 <option value="jakarta">Jakarta</option>
                 <option value="medan">Medan</option>
                 <option value="surabaya">Surabaya</option>
@@ -91,24 +92,14 @@
             <img src="gambar/calendar.png" height="30" width="30">
             <div class="col">
               <p>Departure:</p>
-              <input type="date" class="form-control">
+              <input type="date" class="form-control" id="dateFlight">
             </div>
           </div>
         </div>
         <div class="col-md-4" style="border-style: solid; border-width: 0px 0px 0px 0px;">
           <div class="row align-items-center">
-            Adult
-            <select style="margin-left:10px">
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-              <option value="4">4</option>
-              <option value="5">5</option>
-              <option value="6">6</option>
-              <option value="7">7</option>
-            </select>
-            Child
-            <select style="margin-left:10px">
+            How many people
+            <select style="margin-left:10px" id="banyakOrang">
               <option value="1">1</option>
               <option value="2">2</option>
               <option value="3">3</option>
@@ -125,7 +116,7 @@
         <div class="col-md-4"></div>
         <div class="col-md-4">
           <div class="form-group">
-            <button class="btn btn-warning form-control">Search Flights</button>
+            <button class="btn btn-warning form-control" id="searchFlights">Search Flights</button>
           </div>
         </div>
       </div>
@@ -134,8 +125,57 @@
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+
 </body>
 </html>
+<script type="text/javascript">
+  document.getElementById("swap").addEventListener("click", function(){
+    var fromSelect = document.getElementById("from");
+    var from = fromSelect.options[fromSelect.selectedIndex].value;
+
+    var toSelect = document.getElementById("to");
+    var to = toSelect.options[toSelect.selectedIndex].value;
+
+    fromSelect.value = to;
+    toSelect.value = from;
+  });
+  document.getElementById("searchFlights").addEventListener("click", function(){
+    var fromSelect = document.getElementById("from");
+    var from = fromSelect.options[fromSelect.selectedIndex].value;
+
+    var toSelect = document.getElementById("to");
+    var to = toSelect.options[toSelect.selectedIndex].value;
+
+    if (from == to) {
+      toastr.warning('Kota asal dan kota tujuan tidak boleh sama..!!!');
+      return;
+    }
+
+    var dateFlight = document.getElementById("dateFlight").value;
+
+    if (dateFlight == null || dateFlight == "") {
+      toastr.warning('Tanggal penerbangan harap diisi..!!!');
+    }
+
+    var banyakOrangSelect = document.getElementById("banyakOrang");
+    var banyakOrang = banyakOrangSelect.options[banyakOrangSelect.selectedIndex].value;
+
+    $.ajax({
+      type: "POST",
+      url: "findticket.php",
+      data: {
+        from : from,
+        to : to,
+        dateFlight : dateFlight,
+        banyakOrang : banyakOrang
+      },
+      success: function(result){
+        
+      }
+    });
+  });
+</script>
