penurunan versi php agar bisa menggunakan driver sqlsrv

--- a/findticket.html
+++ b/findticket.html
@@ -42,6 +42,9 @@
         <p id="banyakpenumpang">haha</p>
       </div>
     </div>
+    <div class="col-md-12" id="list">
+      
+    </div>
   </div>
 
   <!-- Optional JavaScript -->
