--- a/findticket.html
+++ b/findticket.html
@@ -12,13 +12,12 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <img src="gambar/traveloka.png" height="70" width="150">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse">
-      <ul class="navbar-nav mr-auto">
+  <img src="gambar/traveloka.png" height="70" width="150">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav mr-auto">
         <li class="nav-item">
           <a class="nav-link" href="#">Promos</a>
         </li>
@@ -26,8 +25,8 @@
           <a class="nav-link" href="#">Login</a>
         </li>
       </ul>
-    </div>
-  </nav>
+  </div>
+</nav>
 
   <div class="container">
     <div class="col-md-12">
@@ -42,8 +41,23 @@
         <p id="banyakpenumpang">haha</p>
       </div>
     </div>
-    <div class="col-md-12" id="list">
-      
+    <div class="col-md-12">
+      <div class="row">
+        <table class="table table-striped table-bordered" id="tabelPenerbangan">
+          <thead>
+            <tr>
+              <th scope="col">Airline</th>
+              <th scope="col">Depart</th>
+              <th scope="col">Arrive</th>
+              <th scope="col">Duration</th>
+              <th scope="col">Price per person</th>
+            </tr>
+          </thead>
+          <tbody>
+
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 
@@ -54,3 +68,26 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
+<script type="text/javascript">
+  $(document).ready(function() {
+
+    var dataPenerbangan = JSON.parse(localStorage['dataPenerbangan']);
+    console.log(dataPenerbangan);
+    localStorage.removeItem('dataPenerbangan');
+
+    var temp = "";
+
+    for (var i = 0; i < dataPenerbangan.length; i++) {
+      temp += "<tr><td>" + 
+              dataPenerbangan[i]["Nama_Maskapai"] + "</td><td>" + 
+              dataPenerbangan[i]["Jam_Berangkat"]["date"] + "</td><td>" + 
+              dataPenerbangan[i]["Jam_Tiba"]["date"] + "</td><td>" + 
+              dataPenerbangan[i]["Lama_Penerbangan"] + "</td><td>" + 
+              dataPenerbangan[i]["Harga_Per_Orang"] + "</td></tr>"; 
+      // console.log(temp);
+    }
+
+    $("#tabelPenerbangan tbody").append(temp);
+
+  });
+</script>
