--- a/findticket.html
+++ b/findticket.html
@@ -7,17 +7,18 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
   <title>Hello, world!</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <img src="gambar/traveloka.png" height="70" width="150">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav mr-auto">
+    <img src="gambar/traveloka.png" height="70" width="150">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav mr-auto">
         <li class="nav-item">
           <a class="nav-link" href="#">Promos</a>
         </li>
@@ -25,8 +26,8 @@
           <a class="nav-link" href="#">Login</a>
         </li>
       </ul>
-  </div>
-</nav>
+    </div>
+  </nav>
 
   <div class="container">
     <div class="col-md-12">
@@ -38,12 +39,56 @@
       <div class="row align-items-center">
         <p id="hari">haha</p>
         <p style="margin-left:10px; margin-right:10px">|</p>
-        <p id="banyakpenumpang">haha</p>
+        <p id="banyakPenumpang">haha</p>
+      </div>
+    </div>
+    <div class="col-md-12">
+      <div class="row align-items-center">
+        <p>Filter : </p>
+        <button style="margin-left:10px" type="button" class="btn btn-primary" id="btnFilterAirline">Airline</button>
+        <button style="margin-left:10px" type="button" class="btn btn-primary" id="btnFilterTime">Time</button>
+        <button style="margin-left:10px" type="button" class="btn btn-primary" id="btnFilterDuration">Duration</button>
+        <button style="margin-left:10px" type="button" class="btn btn-primary" id="btnFilterPricePerPerson">Price Per Person</button>
+      </div>
+    </div>
+    <div class="col-md-12" id="filterAirline" >
+
+    </div>
+    <div class="col-md-12" id="filterTime" >
+      <div class="row">
+        <div class="col-md-6">
+          <p>Depart</p>
+          <input type="checkbox" name="depart00.00-06.00" value="Depart : 00.00 - 06.00"> 00.00 - 06.00<br>
+          <input type="checkbox" name="depart06.00-12.00" value="Depart : 06.00 - 12.00"> 06.00 - 12.00<br>
+          <input type="checkbox" name="depart12.00-18.00" value="Depart : 12.00 - 18.00"> 12.00 - 18.00<br>
+          <input type="checkbox" name="depart18.00-00.00" value="Depart : 18.00 - 00.00"> 18.00 - 00.00<br>
+        </div>
+        <div class="col-md-6">
+          <p>Arrive</p>
+          <input type="checkbox" name="arrive00.00-06.00" value="Arrive : 00.00 - 06.00"> 00.00 - 06.00<br>
+          <input type="checkbox" name="arrive06.00-12.00" value="Arrive : 06.00 - 12.00"> 06.00 - 12.00<br>
+          <input type="checkbox" name="arrive12.00-18.00" value="Arrive : 12.00 - 18.00"> 12.00 - 18.00<br>
+          <input type="checkbox" name="arrive18.00-00.00" value="Arrive : 18.00 - 00.00"> 18.00 - 00.00<br>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-12" id="filterDuration" >
+      <p>Duration</p>
+      <div class="col-md-4">
+        <div id="sliderDuration"></div>
+      </div>
+    </div>
+    <div class="col-md-12" id="filterPricePerPerson" >
+
+    </div>
+    <div class="col-md-12" id="filter" >
+      <div class="row">
+        <p>Filters : </p>
       </div>
     </div>
     <div class="col-md-12">
       <div class="row">
-        <table class="table table-striped table-bordered" id="tabelPenerbangan">
+        <table class="table table-hover" id="tabelPenerbangan">
           <thead>
             <tr>
               <th scope="col">Airline</th>
@@ -63,27 +108,59 @@
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="helper.js"></script>
 </body>
 </html>
 <script type="text/javascript">
   $(document).ready(function() {
 
+    $( "#sliderDuration" ).slider({
+      range: true,
+      min: 0,
+      max: 6
+    });
+
     var dataPenerbangan = JSON.parse(localStorage['dataPenerbangan']);
     console.log(dataPenerbangan);
-    localStorage.removeItem('dataPenerbangan');
+
+    $("#awal").text(JSON.parse(localStorage['from']));
+    $("#tujuan").text(JSON.parse(localStorage['to']));
+    $("#hari").text(JSON.parse(localStorage['dateFlight']));
+    $("#banyakPenumpang").text(JSON.parse(localStorage['banyakOrang']) + " people");
 
     var temp = "";
 
     for (var i = 0; i < dataPenerbangan.length; i++) {
+      var namaMaskapai = dataPenerbangan[i]["Nama_Maskapai"];
+      var jamBerangkat = dataPenerbangan[i]["Jam_Berangkat"]["date"];
+      var jamTiba = dataPenerbangan[i]["Jam_Tiba"]["date"];
+      var lamaPenerbangan = dataPenerbangan[i]["Lama_Penerbangan"];
+      var hargaPerOrang = dataPenerbangan[i]["Harga_Per_Orang"];
+
+      var gambarPesawat;
+
+      if (namaMaskapai == "Citilink") gambarPesawat = "<img src='gambar/citilink.png' height='100' width='150'></img>";
+      else if (namaMaskapai == "Lion Air") gambarPesawat = "<img src='gambar/lionair.png' height='100' width='150'></img>";
+      else if (namaMaskapai == "Adam Air") gambarPesawat = "<img src='gambar/adamair.png' height='100' width='150'></img>";
+      else if (namaMaskapai == "Air Asia") gambarPesawat = "<img src='gambar/airasia.jpg' height='100' width='150'></img>";
+      else if (namaMaskapai == "Garuda Indonesia") gambarPesawat = "<img src='gambar/garuda.jpg' height='100' width='150'></img>";
+
+      var buttonChoose = "<button type='button' class='btn btn-warning'>Choose</button>";
+      document.addEventListener("click", function() {
+
+      });
+
       temp += "<tr><td>" + 
-              dataPenerbangan[i]["Nama_Maskapai"] + "</td><td>" + 
-              dataPenerbangan[i]["Jam_Berangkat"]["date"] + "</td><td>" + 
-              dataPenerbangan[i]["Jam_Tiba"]["date"] + "</td><td>" + 
-              dataPenerbangan[i]["Lama_Penerbangan"] + "</td><td>" + 
-              dataPenerbangan[i]["Harga_Per_Orang"] + "</td></tr>"; 
+      gambarPesawat + 
+      dataPenerbangan[i]["Nama_Maskapai"] + "</td><td>" + 
+      formatTanggalKeJam(jamBerangkat) + "</td><td>" + 
+      formatTanggalKeJam(jamTiba) + "</td><td>" + 
+      formatMenitKeJam(lamaPenerbangan) + "</td><td>" + 
+      formatKeRupiah(hargaPerOrang) + "<br>"+ buttonChoose + "</td></tr>"; 
       // console.log(temp);
     }
 
